# promptsmith

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json
.github/workflows/: docker-publish-api.yml  docker-publish-backend.yml  docker-publish-frontend.yml
clients-side/python-sdk/: README.md  pyproject.toml
core/: api.py  auth.py  models.py  schemas.py  simple_auth.py  urls.py
core/migrations/: 0001_initial.py  0002_alter_prompt_unique_key_and_more.py  0002_alter_prompt_uuid_alter_promptvariant_uuid_and_more.py  0002_prompt_project.py  0002_remove_promptvariant_selected_version_key_and_more.py  0002_remove_promptvariant_selected_version_uuid_and_more.py  0002_remove_promptversion_core_prompt_name_2d7d7d_idx_and_more.py  0003_alter_promptvariant_name.py  0003_alter_promptvariant_prompt_and_more.py  0003_remove_promptvariant_unique_prompt_variant_key_and_more.py  0003_remove_promptversion_model_name_and_more.py  0004_alter_promptversion_model_name.py  0004_prompt_project.py  (+9 more)
core_sdk/: apps.py  auth.py  router.py  schema.py
docs/: backend.md
infra/: Dockerfile
project/: auth.py  auth_bearer.py  decorators.py  models.py  tests.py  utils.py  views.py
promptsmith/: .env.default  api.py  api_sdk.py  asgi.py  settings.py  settings_debug.py  settings_production.py  urls.py  wsgi.py
shared/: auth.py  base_models.py  constants.py  decorators.py  errors.py  utils.py  validators.py
user_organisation/: apps.py  models.py
user_organization/: apps.py  models.py
(+126 files in other folders)
