[tool.poetry]
name = "promptsmith"
version = "0.1.0"
description = ""
authors = ["tim-hub <tim-hub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-ninja = "^1.3.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.9.0"
python3-saml = "^1.16.0"
django-allauth = { version = "^64.2.1", extras = ["socialaccount"] }
python-dotenv = "^1.0.1"
django-cors-headers = "^4.4.0"
django-mailer = "^2.3.2"
orjson = "^3.10.7"
django-simple-history = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
